--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignInPage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignInPage.html
@@ -119,9 +119,6 @@
             margin: 0 auto;
         }
 
-        .form-signin .checkbox {
-            font-weight: 400;
-        }
 
         .form-signin .form-control {
             position: relative;
@@ -155,14 +152,14 @@
 <body class="text-center">
 <form class="form-signin" action="SignIn" method="post">
 
-    <img class="mb-4" src="images/logo.png" alt=""  width="250">
+    <a href="/Employee"><img class="mb-4" src="images/logo2.png" alt=""  width="250"></a>
     <h1 class="h3 mb-3 font-weight-normal">Employee login</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required
            autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-    <a class="small" style="color: grey" href="/Customer">If you are a Customer click here</a>
+    <a class="small" style="color: grey" href="/Customer/SignIn">If you are a Customer click here</a>
     <button class="btn btn-lg btn-primary btn-block" style="margin-top: 20px" type="submit">Sign in</button>
     <p class="text-danger" th:text="${errorMsg}">
     <p class="mt-5 mb-3 text-muted">&copy; 2021-2022</p>
