report servlet restored

--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/fragments/navbar.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/fragments/navbar.html
@@ -14,6 +14,9 @@
                 </ul>
                 <ul class="navbar-nav" th:if="${user!=null}">
                     <li class="nav-item">
+                        <a class="nav-link" th:href="@{/Report}"><span style="color: white"><b>Reports</b></span></a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/Logout}"><span style="color: white">Logout</span></a>
                     </li>
                     <button class="btn btn-secondary" type="button"
