Fixed bugs on mapping PKs of AuditCustomer and PackageStatistics, dump regenerated

--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/ReportPage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/ReportPage.html
@@ -212,8 +212,8 @@
                         <th scope="col">Username</th>
                         <th scope="col">email</th>
                         <th scope="col">#Failed Payments</th>
-                        <th scope="col">Date last rejection</th>
-                        <th scope="col">Amount last rejection</th>
+                        <th scope="col">Date rejection</th>
+                        <th scope="col">Amount rejection</th>
                     </tr>
                     </thead>
                     <tbody>
