Implemented error messages

--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/PackageDetailsPage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/PackageDetailsPage.html
@@ -104,7 +104,11 @@
                 </div>
                 <hr>
         </form>
-
+        <div th:unless="${errorMes == null }" style="margin-top: 20px">
+            <div class="alert alert-danger" role="alert">
+                <h6 class="alert-heading" th:text="${errorMes}">Error</h6>
+            </div>
+        </div>
     </div>
 </section>
 </body>
