--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/HomePage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/HomePage.html
@@ -167,9 +167,9 @@
             </button>
             <hr>
         </form>
-        <div th:unless="${errorMes == null }" style="margin-top: 20px">
+        <div th:unless="${errorMesSp == null }" style="margin-top: 20px">
             <div class="alert alert-danger" role="alert">
-                <h6 class="alert-heading" th:text="${errorMes}">Error</h6>
+                <h6 class="alert-heading" th:text="${errorMesSp}">Error</h6>
             </div>
         </div>
 
@@ -191,9 +191,9 @@
             </button>
             <hr>
         </form>
-        <div th:unless="${errorMes == null }" style="margin-top: 20px">
+        <div th:unless="${errorMesOp == null }" style="margin-top: 20px">
             <div class="alert alert-danger" role="alert">
-                <h6 class="alert-heading" th:text="${errorMes}">Error</h6>
+                <h6 class="alert-heading" th:text="${errorMesOp}">Error</h6>
             </div>
         </div>
 
