--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/ReportPage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/ReportPage.html
@@ -252,7 +252,7 @@
                         <td th:text="${a.customer.username}">Mark</td>
                         <td th:text="${a.customer.email}">Mark</td>
                         <td th:text="${a.customer.numFailedPayments}">Otto</td>
-                        <td th:text="${a.lastRejection}">Otto</td>
+                        <td th:text="${a.date}">Otto</td>
                         <td th:text="${a.amount}">Otto</td>
                     </tr>
                     </tbody>
