Fixed Trigger and View representation of reports, dump regenerated

--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/ReportPage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/ReportPage.html
@@ -96,8 +96,8 @@
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Name</th>
-                        <th scope="col">With optional prods</th>
-                        <th scope="col">Without optional prods</th>
+                        <th scope="col">Total monthly fee for Service Package</th>
+                        <th scope="col">Total monthly fee for all Optional Prods sold together</th>
                     </tr>
                     </thead>
                     <tbody>
