All project code reformatted, some warnings fixed

--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/PackageDetailsPage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/PackageDetailsPage.html
@@ -63,9 +63,11 @@
                     <label class="form-check-label" th:for="'offer'+${offer.id}">
                         <span th:text="${offer.getMonthlyFee() + ' '}">x</span> &euro;/month for <span
                             th:text="${offer.getValidityPeriod() + ' '}">x</span> months</label>
-                    <input class="form-check-input" th:id="'offer'+${offer.id}" name="offerRadio" th:value="${offer.id}"
-                           type="radio"
-                           th:checked="${buyService.getOrder() != null && buyService.getOrder().getOffer() != null && buyService.getOrder().getOffer().id == offer.id}">
+                    <input class="form-check-input" name="offerRadio"
+                           th:checked="${buyService.getOrder() != null && buyService.getOrder().getOffer() != null && buyService.getOrder().getOffer().id == offer.id}"
+                           th:id="'offer'+${offer.id}"
+                           th:value="${offer.id}"
+                           type="radio">
                 </div>
             </div>
 
@@ -79,12 +81,13 @@
 
                 <div class="container" style="margin-top: 20px">
                     <div class="row w-100">
-                        <div th:each="optProd : ${buyService.getOptionalProduct()}" style="margin-left: 10px; margin-right: 10px;"
-                             class="card w-auto">
+                        <div class="card w-auto"
+                             style="margin-left: 10px; margin-right: 10px;"
+                             th:each="optProd : ${buyService.getOptionalProduct()}">
                             <div class="card-body">
-                                <input type="checkbox" style="width: 20px; height: 20px"
-                                       th:id="'optProd' + ${optProd.key.getId()}" name="opProd"
-                                       th:value="${optProd.key.getId()}" th:checked="${optProd.value}">
+                                <input name="opProd" style="width: 20px; height: 20px"
+                                       th:checked="${optProd.value}" th:id="'optProd' + ${optProd.key.getId()}"
+                                       th:value="${optProd.key.getId()}" type="checkbox">
                                 <b style="font-size: 20px" th:text="${optProd.key.name}">Optional product name</b>
                                 <span th:text="${optProd.key.monthlyFee + ' '}">10</span><span>&euro;/month</span>
                             </div>
@@ -94,17 +97,17 @@
             </div>
 
 
-                <hr>
-                <div class=" text-center text-lg-start mt-4 pt-2" style="display: flex;justify-content: space-between;">
+            <hr>
+            <div class=" text-center text-lg-start mt-4 pt-2" style="display: flex;justify-content: space-between;">
                     <span style="font-size: 35px"><b
                             th:text="${buyService.getOrder().getTotalMonthlyFee() + ' '}">35€</b>&euro;/month</span>
-                    <button type="submit" class="btn btn-primary btn-lg"
-                            style="padding-left: 2.5rem; padding-right: 2.5rem;">Checkout
-                    </button>
-                </div>
-                <hr>
+                <button class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;"
+                        type="submit">Checkout
+                </button>
+            </div>
+            <hr>
         </form>
-        <div th:unless="${errorMes == null }" style="margin-top: 20px">
+        <div style="margin-top: 20px" th:unless="${errorMes == null }">
             <div class="alert alert-danger" role="alert">
                 <h6 class="alert-heading" th:text="${errorMes}">Error</h6>
             </div>
