--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/HomePage.html
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/HomePage.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Meta tag required for boostrap -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <!-- Bootstrap CSS -->
     <link crossorigin="anonymous"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -34,8 +34,8 @@
             <h1 style="margin-bottom: 20px; margin-top: 20px">Rejected payments</h1>
             <p style="margin-bottom: 20px; margin-top: 20px; color: grey">List of unsuccessful payments:</p>
             <div class="list-group">
-                <div th:each="order: ${rejPayments}" style="margin-bottom: 20px"
-                     class="list-group-item list-group-item-action">
+                <div class="list-group-item list-group-item-action" style="margin-bottom: 20px"
+                     th:each="order: ${rejPayments}">
                     <div class="d-flex w-100 justify-content-between" style="vertical-align: center">
                         <div>
                             <h5 class="mb-1" th:text="${order.offer.servicePackage.name}">Package name</h5>
@@ -46,8 +46,8 @@
                             <b class="text-muted" th:text="${order.totalMonthlyFee}">0€</b> <b
                                 class="text-muted">&euro;</b>
                             <div style="width: 30px"></div>
-                            <a class="btn btn-primary float-end" th:href="@{Payment(id=${order.id})}"
-                               role="button">Repay</a>
+                            <a class="btn btn-primary float-end" role="button"
+                               th:href="@{Payment(id=${order.id})}">Repay</a>
                         </div>
                     </div>
                 </div>
@@ -55,14 +55,15 @@
         </div>
         <h1 style="margin-bottom: 20px; margin-top: 20px">Our Service Packages</h1>
         <div class="row">
-            <div th:each="sPackage: ${servicePackages}" class="card" style="width: 18rem; margin: 20px">
+            <div class="card" style="width: 18rem; margin: 20px" th:each="sPackage: ${servicePackages}">
                 <div class="card-body">
                     <h5 class="card-title" style="font-weight: bold" th:text="${sPackage.getName()}">Package name</h5>
-                    <p style="margin-bottom: 10px; margin-top: 10px; color: grey">this package includes the following services</p>
+                    <p style="margin-bottom: 10px; margin-top: 10px; color: grey">this package includes the following
+                        services</p>
                 </div>
                 <div class="container h-custom">
                     <ul class="list-group">
-                        <li th:each="service: ${sPackage.serviceList}" class="list-group-item">
+                        <li class="list-group-item" th:each="service: ${sPackage.serviceList}">
                             <span th:if="${service.type == 1}">Fixed Internet</span>
                             <span th:if="${service.type == 2}">Fixed Phone</span>
                             <span th:if="${service.type == 3}">Mobile Internet</span>
@@ -71,7 +72,7 @@
                     </ul>
                 </div>
                 <div class="card-body">
-                    <a th:href="@{/GetPackageDetails(id_sp=${sPackage.id})}" class="card-link">View more</a>
+                    <a class="card-link" th:href="@{/GetPackageDetails(id_sp=${sPackage.id})}">View more</a>
                 </div>
             </div>
         </div>
