--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/HomePage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/HomePage.html
@@ -33,7 +33,7 @@
             </div>
             <div th:if="${fixedInternet.size() > 0 || mobileInternet.size() > 0 || mobilePhone.size() > 0 || fixedPhone != null }">
                 <span>Choose services to add</span>
-                <div th:if="${fixedInternet.size() > 0}" class="container" style="margin-top: 20px">
+                <div class="container" style="margin-top: 20px" th:if="${fixedInternet.size() > 0}">
                     <fieldset id="fixedInternetRadio">
                         <div class="row w-100">
                             <div class="card w-auto" style="margin-left: 10px; margin-right: 10px"
@@ -41,8 +41,8 @@
                                 <div class="card-body">
                                     <div class="form-check">
                                         <b style="font-size: 20px">Fixed Internet</b>
-                                        <input class="form-check-input" th:id="'service'+${s.getId()}"
-                                               name="fixedInternetRadio"
+                                        <input class="form-check-input" name="fixedInternetRadio"
+                                               th:id="'service'+${s.getId()}"
                                                th:value="${s.getId()}" type="radio">
                                     </div>
                                     <div>
@@ -57,78 +57,78 @@
                     <hr>
                 </div>
 
-                <div th:if="${mobileInternet.size() > 0}" class="container" style="margin-top: 20px">
+                <div class="container" style="margin-top: 20px" th:if="${mobileInternet.size() > 0}">
                     <fieldset id="mobileInternetRadio">
-                    <div class="row">
-                        <div class="card w-auto" style="margin-left: 10px; margin-right: 10px"
-                             th:each="s : ${mobileInternet}">
-                            <div class="card-body">
-                                <div class="form-check">
-                                    <b style="font-size: 20px">Mobile Internet</b>
-                                    <input class="form-check-input" th:id="'mobileInternet'+${s.getId()}"
-                                           name="mobileInternetRadio"
-                                           th:value="${s.getId()}" type="radio">
-                                </div>
-                                <div>
-                                    <span th:text="${s.getnGigabytes() + ' '}">10</span><span>GB</span>
-                                    <span> - </span>
-                                    <span th:text="${s.getFeeGigabytes() + ' '}">10</span><span>&euro;/GB</span>
+                        <div class="row">
+                            <div class="card w-auto" style="margin-left: 10px; margin-right: 10px"
+                                 th:each="s : ${mobileInternet}">
+                                <div class="card-body">
+                                    <div class="form-check">
+                                        <b style="font-size: 20px">Mobile Internet</b>
+                                        <input class="form-check-input" name="mobileInternetRadio"
+                                               th:id="'mobileInternet'+${s.getId()}"
+                                               th:value="${s.getId()}" type="radio">
+                                    </div>
+                                    <div>
+                                        <span th:text="${s.getnGigabytes() + ' '}">10</span><span>GB</span>
+                                        <span> - </span>
+                                        <span th:text="${s.getFeeGigabytes() + ' '}">10</span><span>&euro;/GB</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     </fieldset>
                     <hr>
                 </div>
 
 
-                <div th:if="${mobilePhone.size() > 0}" class="container" style="margin-top: 20px">
+                <div class="container" style="margin-top: 20px" th:if="${mobilePhone.size() > 0}">
                     <fieldset id="mobilePhoneRadio">
-                    <div class="row">
-                        <div class="card w-auto" style="margin-left: 10px; margin-right: 10px"
-                             th:each="s : ${mobilePhone}">
-                            <div class="card-body">
-                                <div class="form-check">
-                                    <b style="font-size: 20px">Mobile Phone</b>
-                                    <input class="form-check-input" th:id="'MobilePhone'+${s.getId()}"
-                                           name="mobilePhoneRadio"
-                                           th:value="${s.getId()}" type="radio">
-                                </div>
-                                <div>
-                                    <span th:text="${s.getnMinutes() + ' '}">10</span><span>minutes</span>
-                                    <span> - </span>
-                                    <span th:text="${s.getFeeMinutes() + ' '}">10</span><span>&euro;/minute</span>
-                                </div>
-                                <div>
-                                    <span th:text="${s.getnSms() + ' '}">10</span><span>SMS</span>
-                                    <span> - </span>
-                                    <span th:text="${s.getFeeSms() + ' '}">10</span><span>&euro;/SMS</span>
+                        <div class="row">
+                            <div class="card w-auto" style="margin-left: 10px; margin-right: 10px"
+                                 th:each="s : ${mobilePhone}">
+                                <div class="card-body">
+                                    <div class="form-check">
+                                        <b style="font-size: 20px">Mobile Phone</b>
+                                        <input class="form-check-input" name="mobilePhoneRadio"
+                                               th:id="'MobilePhone'+${s.getId()}"
+                                               th:value="${s.getId()}" type="radio">
+                                    </div>
+                                    <div>
+                                        <span th:text="${s.getnMinutes() + ' '}">10</span><span>minutes</span>
+                                        <span> - </span>
+                                        <span th:text="${s.getFeeMinutes() + ' '}">10</span><span>&euro;/minute</span>
+                                    </div>
+                                    <div>
+                                        <span th:text="${s.getnSms() + ' '}">10</span><span>SMS</span>
+                                        <span> - </span>
+                                        <span th:text="${s.getFeeSms() + ' '}">10</span><span>&euro;/SMS</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     </fieldset>
                     <hr>
                 </div>
 
 
-                <div th:if="${fixedPhone != null}" class="container" style="margin-top: 20px">
+                <div class="container" style="margin-top: 20px" th:if="${fixedPhone != null}">
                     <fieldset id="fixedPhoneRadio">
-                    <div class="row">
-                        <div class="card w-auto" style="margin-left: 10px; margin-right: 10px">
-                            <div class="card-body">
-                                <div class="form-check">
-                                    <b style="font-size: 20px">Fixed Phone</b>
-                                    <input class="form-check-input" th:id="'fixedPhone'+${fixedPhone.getId()}"
-                                           name="fixedPhoneRadio"
-                                           th:value="${fixedPhone.getId()}" type="radio">
-                                </div>
-                                <div>
-                                    <span>Unlimited minutes</span>
+                        <div class="row">
+                            <div class="card w-auto" style="margin-left: 10px; margin-right: 10px">
+                                <div class="card-body">
+                                    <div class="form-check">
+                                        <b style="font-size: 20px">Fixed Phone</b>
+                                        <input class="form-check-input" name="fixedPhoneRadio"
+                                               th:id="'fixedPhone'+${fixedPhone.getId()}"
+                                               th:value="${fixedPhone.getId()}" type="radio">
+                                    </div>
+                                    <div>
+                                        <span>Unlimited minutes</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     </fieldset>
                     <hr>
                 </div>
@@ -141,14 +141,14 @@
                 <span>Choose the optional products to add</span>
 
 
-
                 <div class="container" style="margin-top: 20px">
                     <div class="row">
                         <div class="card w-auto" style="margin-left: 10px; margin-right: 10px"
                              th:each="optProd : ${optionalProducts}">
                             <div class="card-body">
-                                <input style="width: 20px; height: 20px" type="checkbox" th:id="'optProd' + ${optProd.getId()}" name="opProd"
-                                       th:value="${optProd.getId()}">
+                                <input name="opProd" style="width: 20px; height: 20px"
+                                       th:id="'optProd' + ${optProd.getId()}" th:value="${optProd.getId()}"
+                                       type="checkbox">
                                 <b style="font-size: 20px" th:text="${optProd.getName()}">Optional product name</b>
                                 <span th:text="${optProd.getMonthlyFee() + ' '}">10</span><span>&euro;/month</span>
 
@@ -158,12 +158,12 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-primary btn-lg"
-                    style="padding-left: 2.5rem; padding-right: 2.5rem; margin-top: 20px">Create Service Package
+            <button class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem; margin-top: 20px"
+                    type="submit">Create Service Package
             </button>
             <hr>
         </form>
-        <div th:unless="${errorMesSp == null }" style="margin-top: 20px">
+        <div style="margin-top: 20px" th:unless="${errorMesSp == null }">
             <div class="alert alert-danger" role="alert">
                 <h6 class="alert-heading" th:text="${errorMesSp}">Error</h6>
             </div>
@@ -178,16 +178,16 @@
             </div>
             <div class="form-group" style="margin-bottom: 20px">
                 <label for="opMonthFee">Fee</label>
-                <input class="form-control" id="opMonthFee" name="opMonthFee" placeholder="Enter fee" type="number"
-                       step="any">
+                <input class="form-control" id="opMonthFee" name="opMonthFee" placeholder="Enter fee" step="any"
+                       type="number">
             </div>
 
-            <button type="submit" class="btn btn-primary btn-lg"
-                    style="padding-left: 2.5rem; padding-right: 2.5rem;">Create Optional Product
+            <button class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;"
+                    type="submit">Create Optional Product
             </button>
             <hr>
         </form>
-        <div th:unless="${errorMesOp == null }" style="margin-top: 20px">
+        <div style="margin-top: 20px" th:unless="${errorMesOp == null }">
             <div class="alert alert-danger" role="alert">
                 <h6 class="alert-heading" th:text="${errorMesOp}">Error</h6>
             </div>
