--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignInPage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/SignInPage.html
@@ -79,10 +79,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="" name="description">
+    <meta content="" name="author">
+    <link href="/docs/4.0/assets/img/favicons/favicon.ico" rel="icon">
 
     <title>PoliComShop - Customer Login</title>
 
@@ -150,16 +150,16 @@
 </head>
 
 <body class="text-center">
-<form class="form-signin" action="SignIn" method="post">
+<form action="SignIn" class="form-signin" method="post">
 
-    <a href="/Employee"><img class="mb-4" src="images/logo2.png" alt=""  width="250"></a>
+    <a href="/Employee"><img alt="" class="mb-4" src="images/logo2.png" width="250"></a>
     <h1 class="h3 mb-3 font-weight-normal">Employee login</h1>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required
-           autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-    <a class="small" style="color: grey" href="/Customer/SignIn">If you are a Customer click here</a>
+    <label class="sr-only" for="inputEmail">Email address</label>
+    <input autofocus class="form-control" id="inputEmail" name="email" placeholder="Email address" required
+           type="email">
+    <label class="sr-only" for="inputPassword">Password</label>
+    <input class="form-control" id="inputPassword" name="password" placeholder="Password" required type="password">
+    <a class="small" href="/Customer/SignIn" style="color: grey">If you are a Customer click here</a>
     <button class="btn btn-lg btn-primary btn-block" style="margin-top: 20px" type="submit">Sign in</button>
     <p class="text-danger" th:text="${errorMsg}">
     <p class="mt-5 mb-3 text-muted">&copy; 2021-2022</p>
