--- a/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/fragments/navbar.html
+++ b/EmployeeWeb/src/it.polimi.DB2/webapp/WEB-INF/templates/fragments/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(51, 102, 255, 0.6)" th:fragment="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/" th:href="@{/}"><img src="images/logo.png" alt="" width="200"></a>
+        <a class="navbar-brand" href="/" th:href="@{/}"><img alt="" src="images/logo.png" width="200"></a>
         <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                 data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
@@ -19,8 +19,8 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/Logout}"><span style="color: white">Logout</span></a>
                     </li>
-                    <button class="btn btn-secondary" type="button"
-                            th:text="${user.getUsername()}">
+                    <button class="btn btn-secondary" th:text="${user.getUsername()}"
+                            type="button">
                         Username
                     </button>
                 </ul>
